[gd_scene load_steps=8 format=2]

[ext_resource path="res://Interface/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/MainMenu.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.5
margin_top = 64.0
margin_right = 236.5
margin_bottom = 176.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.964706, 0.635294, 0.0627451, 1 )
custom_colors/font_color_pressed = Color( 0.764706, 0.52549, 0.113725, 1 )
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Score" type="Label" parent="CenterContainer"]
margin_left = 179.0
margin_top = 264.0
margin_right = 845.0
margin_bottom = 376.0
custom_fonts/font = ExtResource( 2 )
text = "YOU SCORED 99"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="MainMenu" to="." method="_on_MainMenu_mouse_entered"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
